fixed spacing

--- a/css/front.css
+++ b/css/front.css
@@ -57,7 +57,8 @@ nav a:hover{
 }
 
 .content-spacing{
-  height: 135px;
+  /*height: 135px;*/
+  height: 45px;
   /*padding: 35%;*/
 }
 
